--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "portfolio",
-	"version": "0.1.0",
+	"version": "0.2.0",
 	"homepage": "https://jfromentrudder.github.io",
 	"private": true,
 	"dependencies": {
@@ -14,6 +14,8 @@
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d build",
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
