--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "portfolio",
-	"version": "0.2.0",
+	"version": "1.0.0",
 	"homepage": "https://jfromentrudder.github.io",
 	"private": true,
 	"dependencies": {
@@ -11,8 +11,8 @@
 		"@testing-library/user-event": "^13.5.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-icons": "^4.6.0",
 		"react-scripts": "5.0.1",
-		"react-scroll-to-top": "^3.0.0",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
@@ -24,22 +24,11 @@
 		"eject": "react-scripts eject"
 	},
 	"eslintConfig": {
-		"extends": [
-			"react-app",
-			"react-app/jest"
-		]
+		"extends": [ "react-app", "react-app/jest" ]
 	},
 	"browserslist": {
-		"production": [
-			">0.2%",
-			"not dead",
-			"not op_mini all"
-		],
-		"development": [
-			"last 1 chrome version",
-			"last 1 firefox version",
-			"last 1 safari version"
-		]
+		"production": [ ">0.2%", "not dead", "not op_mini all" ],
+		"development": [ "last 1 chrome version", "last 1 firefox version", "last 1 safari version" ]
 	},
 	"devDependencies": {
 		"@heroicons/react": "^2.0.12",
